--- a/ugolki/Ugolki/Ugolki.vcxproj
+++ b/ugolki/Ugolki/Ugolki.vcxproj
@@ -111,6 +111,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="minimax.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ugolki.h" />
