--- a/ugolki/Ugolki/Ugolki.vcxproj.filters
+++ b/ugolki/Ugolki/Ugolki.vcxproj.filters
@@ -21,7 +21,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ugolki.h">
-      <Filter>Файлы исходного кода</Filter>
+      <Filter>Заголовочные файлы</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
